# soccer-agent

./: .env.example  .release-please-manifest.json  CHANGELOG.md  PLAN.md  README.md  WALKTHROUGH.md  argocd-app.yaml  cli.py  pyproject.toml  release-please-config.json
.github/workflows/: build-images.yml  release-please.yml
data-pipeline/: CHANGELOG.md  Dockerfile  clean.py  fetch_elo.py  fetch_fixtures.py  ingest.py  scrape_news.py
data-pipeline/data/: .gitignore  World.tsv  chunks.json  elo_ratings.json  embeddings.json  fixtures.json  fun_facts.yaml  official_news.json  soccer_domains.yaml
k8s/: chromadb-deployment.yaml  create-user-sealed-secret.yaml  create_user.yaml  ingress.yaml  kustomization.yaml  langflow-deployment.yaml  litellm-configmap.yaml  litellm-deployment.yaml  mcp-server-deployment.yaml  mcp-strip-prefix-middleware.yaml  news-scraper-cronjob.yaml  openai-api-key-sealed-secret.yaml
langflow-components/: mcp_tool_caller.py
langflow-flows/: wm_agent_flow.json
mcp-server/: CHANGELOG.md  Dockerfile  data_loader.py  server.py
mcp-server/tools/: compare_teams.py  get_elo_trend.py  get_matches.py  get_opponents.py  get_team_elo.py  scrape_official_news.py  search_news.py  simulate_tournament.py
notebooks/: 01_mcp_client.ipynb  01_rag_pipeline.ipynb  02_mcp_simulation.ipynb  02_monte_carlo.ipynb  03_rag_intro.ipynb  03_react_agent.ipynb  04_soccer_agent.ipynb  generate_notebooks.py
