[project]
name = "soccer-agent"
version = "0.2.0"
description = "KI-Trainer 2026: WM-Experten-Agent für den Workshop"
requires-python = ">=3.11"

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # LLM & Embeddings
    "openai>=1.30.0",
    # Vektordatenbanken
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    # Datenpipeline
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # MCP-Server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    # Websuche (DuckDuckGo, kein API-Key)
    "duckduckgo-search>=6.0.0",
    # Notebooks
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
# Haupteinstiegspunkt: uv run wm
wm = "cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]
